# ribbon

./: Cargo.toml  README.md
.github/workflows/: build.yml  ci.yml  docs.yml  rust.yml
src/: band.rs  lib.rs  ribbon.rs  tape.rs
tests/: mod.rs
